# FederatedSimulation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: logistics_3org.yaml
data/: download.sh
data/whatIF/: csv_to_sql.ipynb
data/whatIF/custom_logistics_sim/: event.csv  event_BookVehicles.csv  event_BringToLoadingBay.csv  event_CollectGoods.csv  event_CreateTransportDocument.csv  event_Depart.csv  event_DriveToTerminal.csv  event_LoadToVehicle.csv  event_LoadTruck.csv  event_OrderEmptyContainers.csv  event_PickUpEmptyContainer.csv  event_PlaceInStock.csv  event_RegisterCustomerOrder.csv  event_RescheduleContainer.csv  event_Weigh.csv  event_object.csv  logistics-log-initializer.sml  logistics-sim-utils.sml  logistics.cpn  object.csv  object_Container.csv  object_CustomerOrder.csv  object_Forklift.csv  object_HandlingUnit.csv  object_TransportDocument.csv  object_Truck.csv  object_Vehicle.csv  object_object.csv
data/whatIF/custom_logistics_sim_wi/: event.csv  event_BookVehicles.csv  event_BringToLoadingBay.csv  event_CollectGoods.csv  event_CreateTransportDocument.csv  event_Depart.csv  event_DriveToTerminal.csv  event_LoadToVehicle.csv  event_LoadTruck.csv  event_OrderEmptyContainers.csv  event_PickUpEmptyContainer.csv  event_Weigh.csv  (+14 more)
experiments/: 01_load_and_partition.py  02_aggregate_timeseries.py  03_discover_local_sfds.py  04_discover_federation.py  reproduce.py
mp_spdz/: README.md
mp_spdz/programs/: fedsfd_boundary_flow.mpc  fedsfd_boundary_flow_persist.mpc  fedsfd_correlation.mpc  fedsfd_regression.mpc  fedsfd_regression_persist.mpc
(+49 files in other folders)
